# python_practice

./: .gitignore  2user_bmi.py  3love_calculator.py  5even_number_random_number.py  5pass_word_generator.py  Day10_calculation.py  Day11_blackjack.py  Day12_number_guess.py  Day14_higher_lower_game.py  Day15_coffee.py  Day16_my_coffee_machine.py  Day17_main.py  Day17_quiz_brain.py  Day18_Turtle.py  Day18_color_dots.py  Day20_scoreboard.py  Day20_snake.py  Day20_snake_main.py  Day7_Hangman.py  Day8_caesar_cipher.py  Day9_auction.py  choose_dinner.py  choose_dinner2.py  class_cat.py  class_grade.py  dictionaries.py  for_i_in_range.py  format_message.py  list_for_i_in_range.py  my_cat_game.py  my_cat_game22.py  my_cat_game33.py  order_food.py  pyproject.toml  recursion.py  shopping_list.py  test.html  test.py  time.py  treasure_map.py  (+1 more)
Day11_blackjack/: Day11_blackjack.py
Day12_number_guess/: Day12_number_guess.py
Day14_higher_lower_game/: Day14_higher_lower_game.py
Day15_coffee/: Day15_coffee.py
Day20_snake/: Day20_scoreboard.py  Day20_slice.py  Day20_snake_main.py
Day22_pong_game/: Day22_paddle.py  Day22_pong_game.py
Day23_turtle-crossing-start/: car_manager.py  main.py  player.py  scoreboard.py
Day24_mail/: Day24_mail.py  file_that_doesnt_exist.txt  my_file.txt  open_file.py
Day25/: learn_pandas.py
Day25_CSV_Pandas/: new_data.csv
Day26/: day26_4_exercise.py  dict_comprehension.py
Day26_list_comprehension/: list_comprehension.py
Day27_Tkinter_args/: args.py  main.py  playground.py  practice.py
Day28_pomodoro-start/: pomodoro.py
Day33/: day32.py
(+61 files in other folders)
