[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Weiwei Lin <stormer.boxes-06@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
replit = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
